inicio del sprint .1

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electro Armed</title>
-    <link rel="shortcut icon" href="img/logo.png">
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -15,25 +15,50 @@
                 <a class="navbar-brand" href="#">
                     <img src="img/logo.png" alt="Bootstrap" width="30" height="24">
                 </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="index.html">Pagina Inicio</a>
-                  <a class="nav-link" href="login.html">Login</a>
-                  <a class="nav-link" href="logup.html">Logup</a>
-                  <a class="nav-link" href="home.html">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="index.html">Pagina Inicio</a>
+                        <a class="nav-link" href="login.html">Login</a>
+                        <a class="nav-link" href="logup.html">Logup</a>
+                        <a class="nav-link" href="home.html">Home</a>
+                    </div>
                 </div>
-              </div>
             </div>
           </nav>
+          <section class="texto-header">
+            <h1>Electro Armed</h1>
+          </section>
     </header>
     <main>
-
+        <section class="sobreNosotros">
+            <h2 class="titulo_sobreNosotros">¿Quienes Somos?</h2>
+            <div class="sobreNosotrosImagen">
+                <img src="" alt="">
+                <div class="sobreNosotrosTexto">
+                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui excepturi doloremque asperiores reiciendis adipisci earum consequatur expedita rerum exercitationem sunt, molestias incidunt quas minima modi veniam dolorum doloribus. Veritatis, quisquam</span>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <section class="contacto">
+            <div class="contacto-foo">
+                <h3>Numero de contacto</h3>
+                <p>3222165381</p>
+            </div>
+            <div class="contacto-foo">
+                <h3>Email</h3>
+                <p></p>
+            </div>
+            <div class="contacto-foo">
+                <h3>Direccion</h3>
+                <p>CRA 81 # 73 F 09 SUR, Bosa, Bogotá</p>
+            </div>
+            <div class="contacto_map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.9049149951643!2d-74.20209682499909!3d4.611037642428297!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9f8825345467%3A0xaf395468b3d741f2!2sFERRELECTRICOS%20ELECTRO%20ARMED!5e0!3m2!1ses!2sco!4v1695177625473!5m2!1ses!2sco" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        </section>
     </footer>    
 </body>
 </html>
