--- a/login.html
+++ b/login.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
@@ -27,6 +26,22 @@
               </div>
             </div>
           </nav>
-    </header>
+          <section class="formulario">
+            <form> 
+                <label for="nombre">nombre</label>
+                <input type="text" id="nombre">
+
+                <label for="user">Usuario</label>
+                <input type="text" id="user">
+
+                <label for="contraseña">contraseña</label>
+                <input type="password" id="contraseña">
+
+                <button type="submit">Ingresar</button>
+
+                <a href="#">Recuperar contraseña</a>
+                <a href="logup.html">Crear usuario</a>
+            </form>
+          </section>
 </body>
 </html>
