inicio del sprint .3

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="img/logo.png" alt="Bootstrap" width="30" height="24">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,8 +21,8 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="index.html">Pagina Inicio</a>
-                        <a class="nav-link" href="login.html">Login</a>
-                        <a class="nav-link" href="logup.html">Logup</a>
+                        <a class="nav-link" href="login.html">Inicio sesión</a>
+                        <a class="nav-link" href="logup.html">Registrarse</a>
                         <a class="nav-link" href="home.html">Home</a>
                     </div>
                 </div>
@@ -38,23 +38,24 @@
             <div class="sobreNosotrosImagen">
                 <img src="" alt="">
                 <div class="sobreNosotrosTexto">
-                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui excepturi doloremque asperiores reiciendis adipisci earum consequatur expedita rerum exercitationem sunt, molestias incidunt quas minima modi veniam dolorum doloribus. Veritatis, quisquam</span>
+                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit nulla possimus illum placeat, fugiat hic veritatis, est quia autem aliquam commodi nesciunt quo iusto non beatae laudantium exercitationem nostrum explicabo odit eum dolorem iste consectetur. Eius odit aut doloremque corporis perferendis aliquam dignissimos exercitationem. Odio error ea necessitatibus aperiam culpa facere inventore fugiat ratione architecto placeat, amet voluptatem excepturi cupiditate asperiores. Praesentium enim eligendi vero voluptatum, veniam aliquam quaerat ipsa consequuntur quisquam. Itaque molestias inventore nostrum culpa, facere minima, quasi officia sint eaque distinctio necessitatibus minus. Aspernatur exercitationem laudantium odio voluptates laboriosam incidunt, sequi quasi, perferendis quia, in facere?</span>
                 </div>
             </div>
         </section>
     </main>
     <footer>
         <section class="contacto">
+            <h3>Contactenos</h3>
             <div class="contacto-foo">
-                <h3>Numero de contacto</h3>
+                <h6>Numero de contacto</h6>
                 <p>3222165381</p>
             </div>
             <div class="contacto-foo">
-                <h3>Email</h3>
-                <p></p>
+                <h6>Email</h6>
+                <p>electroarmed25@gmail.com</p>
             </div>
             <div class="contacto-foo">
-                <h3>Direccion</h3>
+                <h6>Direccion</h6>
                 <p>CRA 81 # 73 F 09 SUR, Bosa, Bogotá</p>
             </div>
             <div class="contacto_map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.9049149951643!2d-74.20209682499909!3d4.611037642428297!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9f8825345467%3A0xaf395468b3d741f2!2sFERRELECTRICOS%20ELECTRO%20ARMED!5e0!3m2!1ses!2sco!4v1695177625473!5m2!1ses!2sco" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
