--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="home.html">
                     <img src="img/logo.png" alt="Bootstrap" width="30" height="24">
                 </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,13 +20,17 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="index.html">Pagina Inicio</a>
-                  <a class="nav-link" href="login.html">Login</a>
-                  <a class="nav-link" href="logup.html">Logup</a>
-                  <a class="nav-link" href="home.html">Home</a>
                 </div>
               </div>
             </div>
           </nav>
+          <section class="busqueda">
+            <H2>¿Que producto busca?</H2>
+            <input type="search">
+          </section>
     </header>
+    <main>
+
+    </main>
 </body>
 </html>
