--- a/login.html
+++ b/login.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio Sesion</title>
+    <title>Inicio sesión</title>
     <link rel="shortcut icon" href="img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="login.html">
                     <img src="img/logo.png" alt="Bootstrap" width="30" height="24">
                 </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,8 +19,8 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="index.html">Pagina Inicio</a>
-                  <a class="nav-link" href="login.html">Login</a>
-                  <a class="nav-link" href="logup.html">Logup</a>
+                  <a class="nav-link" href="login.html">Inicio sesión</a>
+                  <a class="nav-link" href="logup.html">Registrarse</a>
                   <a class="nav-link" href="home.html">Home</a>
                 </div>
               </div>
@@ -28,14 +28,11 @@
           </nav>
           <section class="formulario">
             <form> 
-                <label for="nombre">nombre</label>
-                <input type="text" id="nombre">
-
-                <label for="user">Usuario</label>
-                <input type="text" id="user">
+                <label for="user">Correo Electronico</label>
+                <input type="text" id="user" required>
 
                 <label for="contraseña">contraseña</label>
-                <input type="password" id="contraseña">
+                <input type="password" id="contraseña" required>
 
                 <button type="submit">Ingresar</button>
 
