--- a/logup.html
+++ b/logup.html
@@ -3,30 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
+    <title>Registrarse</title>
     <link rel="shortcut icon" href="img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="img/logo.png" alt="Bootstrap" width="30" height="24">
-                </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="logup.html">
+                <img src="img/logo.png" alt="Bootstrap" width="30" height="24">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="index.html">Pagina Inicio</a>
-                  <a class="nav-link" href="login.html">Login</a>
-                  <a class="nav-link" href="logup.html">Logup</a>
-                  <a class="nav-link" href="home.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Pagina Inicio</a>
+                    <a class="nav-link" href="login.html">Inicio sesión</a>
+                    <a class="nav-link" href="home.html">Home</a>
                 </div>
-              </div>
             </div>
-          </nav>
-    </header>
+        </div>
+    </nav>
+    <section class="formulario">
+        <form action="">
+            <label for="name">nombre</label>
+            <input type="text" id="name" required>
+
+            <label for="last">apellido</label>
+            <input type="text" id="last">
+
+            <label for="email">Correo Electronico</label>
+            <input type="email" id="email" required>
+
+            <label for="password">Contraseña</label>
+            <input type="password" id="password" required>
+
+            <label for="password1">Contraseña</label>
+            <input type="password" id="password1" placeholder="Confirme contraseña" required>
+
+            <label for="address">Direccion</label>
+            <input type="text" id="name" required>
+
+            <button>Registrarse</button>
+        </form>
+    </section>
+    
+
 </body>
 </html>
