--- a/home.html
+++ b/home.html
@@ -25,8 +25,12 @@
             </div>
           </nav>
           <section class="busqueda">
-            <H2>¿Que producto busca?</H2>
-            <input type="search">
+            
+            <div class="text-center">
+                <H2>¿Que producto buscas?</H2>
+                <input type="search">
+            </div>
+            
           </section>
     </header>
     <main>
