--- a/index.html
+++ b/index.html
@@ -11,30 +11,63 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+            <div class="container-fluid ">
                 <a class="navbar-brand" href="index.html">
-                    <img src="img/logo.png" alt="Bootstrap" width="30" height="24">
+                    <img src="img/logo.png" alt="Bootstrap" width="40" height="30">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" 
+                data-bs-toggle="collapse" 
+                data-bs-target="#navbarS" 
+                aria-controls="navbarS" 
+                aria-expanded="false" 
+                aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="index.html">Pagina Inicio</a>
-                        <a class="nav-link" href="login.html">Inicio sesión</a>
-                        <a class="nav-link" href="logup.html">Registrarse</a>
-                        <a class="nav-link" href="home.html">Home</a>
-                    </div>
+                <div class="collapse navbar-collapse" id="navbarS">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Pagina Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="login.html">Inicio sesión</a></li>
+                        <li class="nav-item"><a class="nav-link" href="logup.html">Registrarse</a></li>
+                        <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                    </ul>
                 </div>
             </div>
           </nav>
-          <section class="texto-header">
+          <section class="texto-header text-center">
             <h1>Electro Armed</h1>
           </section>
     </header>
     <main>
+        <section>
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="img/herramienta3.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/herramienta3.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/herramienta3.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
         <section class="sobreNosotros">
-            <h2 class="titulo_sobreNosotros">¿Quienes Somos?</h2>
+            <h2 class="titulo_sobreNosotros text-center">¿Quienes Somos?</h2>
             <div class="sobreNosotrosImagen">
                 <img src="" alt="">
                 <div class="sobreNosotrosTexto">
