--- a/logup.html
+++ b/logup.html
@@ -25,29 +25,35 @@
             </div>
         </div>
     </nav>
-    <section class="formulario">
-        <form action="">
-            <label for="name">nombre</label>
-            <input type="text" id="name" required>
-
-            <label for="last">apellido</label>
-            <input type="text" id="last">
-
-            <label for="email">Correo Electronico</label>
-            <input type="email" id="email" required>
-
-            <label for="password">Contraseña</label>
-            <input type="password" id="password" required>
-
-            <label for="password1">Contraseña</label>
-            <input type="password" id="password1" placeholder="Confirme contraseña" required>
-
-            <label for="address">Direccion</label>
-            <input type="text" id="name" required>
-
-            <button>Registrarse</button>
-        </form>
-    </section>
+    <section>
+        <div class="container">
+            <div class="formulario">
+                <div class="col-12 col-sm-8 col-md-6 m-auto">
+                    <div class="card border-0 shadow">
+                        <div class="card-body">
+                            <div class="icon text-center my-3"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                              </svg></div>
+                            <form action="">
+                                <input type="text" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Nombre">
+                                <input type="text" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Apellido">
+                                <input type="email" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Correo Electronico">
+                                <input type="password" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Contraseña">
+                                <input type="password" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Confirme contraseña">
+                                <input type="text" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Direccion">
+                                <div class="text-center mt-3">
+                                    <button class="btn btn-primary">Registrarse</button>
+                                    
+                                    <a href="logup.html" class="nav-link">Ya tengo Cuenta</a>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </section>
     
 
 </body>
