--- a/home.html
+++ b/home.html
@@ -4,37 +4,102 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="shortcut icon" href="img/logo.png">
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="home.html">
-                    <img src="img/logo.png" alt="Bootstrap" width="30" height="24">
-                </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="index.html">Pagina Inicio</a>
-                </div>
+            <a class="navbar-brand" href="index.html">
+                <img src="img/icon.png" alt="Bootstrap" width="30" height="24">
+            </a>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Menú
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#">Perfil</a></li>
+                  <li><a class="dropdown-item" href="#">Carrito</a></li>
+                  <li><a class="dropdown-item" href="#">Historial de compras</a></li>
+                  <li><a class="dropdown-item" href="#">Configuración</a></li>
+                  <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+                </ul>
               </div>
-            </div>
-          </nav>
-          <section class="busqueda">
-            
-            <div class="text-center">
-                <H2>¿Que producto buscas?</H2>
-                <input type="search">
-            </div>
-            
-          </section>
+        </nav>
     </header>
     <main>
+    <section class="busqueda">   
+        <div class="text-center">
+                <H2>¿Que producto buscas?</H2>
+                <input type="search">
+        </div>
+    </section>
 
+    <section class="proyectos">
+            <article class="Herramientas_Manuales">   
+                <div class="Martillo">
+                <img src="img/herramienta/martillo.png" alt="Producto 1">
+                <h2>Martillos</h2>
+                <p>Martillo de Uña, Mango en Madera</p>
+                <p>Precio: $20.000</p>
+                <button>Agregar al Carrito</button>
+            </div>
+            <div class="producto">
+                <img src="img/herramienta/destornillador.png" alt="Producto 2">
+                <h2>Destornilladores</h2>
+                <p>Juego de 2 Destornilladores</p>
+                <p>Precio: $15.000</p>
+                <button>Agregar al Carrito</button>
+            </div>
+            <div class="producto">
+                <img src="img/herramienta/alicate.png" alt="Producto 1">
+                <h2>Alicates</h2>
+                <p>Alicate de mango de goma</p>
+                <p>Precio: $33.000</p>
+                <button>Agregar al Carrito</button>
+            </div>
+        </article>
+
+        <article class="Herramientas Eléctricas">
+            <div class="producto">
+                <img src="img/herramienta/taladro.png" alt="Producto 2">
+                <h2>Taladros</h2>
+                <p>Taladro Percutor 1/2-pulg 800W 2600RPM</p>
+                <p>Precio: $400.000</p>
+                <button>Agregar al Carrito</button>
+            </div>
+            <div class="producto">
+                <img src="img/herramienta/sierra.png" alt="Producto 1">
+                <h2>Sierra </h2>
+                <p>Sierra Circular Eléctrica de 7-1/4 Pulgadas 185 mm de 1800W </p>
+                <p>Precio: $450.000</p>
+                <button>Agregar al Carrito</button>
+            </div>
+            <div class="producto">
+                <img src="img/herramienta/pulidora.png" alt="Producto 2">
+                <h2>Pulidora</h2>
+                <p>Pulidora 9-pulg 2'200W + Pulidora 4-1/2 pulg 700W</p>
+                <p>Precio: $500.000</p>
+                <button>Agregar al Carrito</button>
+            </div>
+        </article>
+        <article class="Cerrajería">
+            <div class="producto">
+                <img src="img/herramienta/llaves.png" alt="Producto 2">
+                <h2>llaves</h2>
+                <p>Precio: $10.000</p>
+                <button>Agregar al Carrito</button>
+            </div>
+            <div class="producto">
+                <img src="img/herramienta/cerradura.png" alt="Producto 1">
+                <h2>cerraduras</h2>
+                <p>Chapa Fortaleza Derecha Bronce</p>
+                <p>Precio: $80.000</p>
+                <button>Agregar al Carrito</button>
+            </div>
+        </article>
+    </section>
     </main>
 </body>
 </html>
