--- a/logup.html
+++ b/logup.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrarse</title>
-    <link rel="shortcut icon" href="img/logo.png">
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="logup.html">
-                <img src="img/logo.png" alt="Bootstrap" width="30" height="24">
+                <img src="img/icon.png" alt="Bootstrap" width="30" height="24">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -19,8 +21,6 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="index.html">Pagina Inicio</a>
-                    <a class="nav-link" href="login.html">Inicio sesión</a>
-                    <a class="nav-link" href="home.html">Home</a>
                 </div>
             </div>
         </div>
@@ -28,7 +28,7 @@
     <section>
         <div class="container">
             <div class="formulario">
-                <div class="col-12 col-sm-8 col-md-6 m-auto">
+                
                     <div class="card border-0 shadow">
                         <div class="card-body">
                             <div class="icon text-center my-3"><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -44,13 +44,12 @@
                                 <input type="text" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Direccion">
                                 <div class="text-center mt-3">
                                     <button class="btn btn-primary">Registrarse</button>
-                                    
-                                    <a href="logup.html" class="nav-link">Ya tengo Cuenta</a>
+                                    <br>
+                                    <a id="crear" href="login.html">Ya tengo Cuenta</a>
                                 </div>
                             </form>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
       </section>
