sprint4 primera entrega

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                   <a class="nav-link" href="login.html">Inicio sesión</a>
                   <a class="nav-link" href="logup.html">Registrarse</a>
                   <a class="nav-link" href="home.html">home</a>
+                  <a class="nav-link" href="admin.html">admin</a>
                 </div>
               </div>
             </div>
