sprint4 primera entrega finalizada

--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
         <section class="busqueda">   
             <div class="busqueda_items text-center">
                     <H2>¿Que producto buscas?</H2>
-                    <input type="search">
+                    <input type="search" placeholder="Escriba aquí ">
             </div>
         </section>
 
