--- a/logup.html
+++ b/logup.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="validacion_logup.js" defer></script>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -35,15 +36,15 @@
                                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                                 <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                               </svg></div>
-                            <form action="">
-                                <input type="text" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Nombre">
-                                <input type="text" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Apellido">
-                                <input type="email" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Correo Electronico">
-                                <input type="password" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Contraseña">
-                                <input type="password" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Confirme contraseña">
-                                <input type="text" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Direccion">
+                            <form id="formulario">
+                                <input type="text" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Nombre" required>
+                                <input type="text" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Apellido" required>
+                                <input type="email" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Correo Electronico" required>
+                                <input type="password" name="" id="password" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Contraseña" required>
+                                <input type="password" name="" id="confirm_password" class="form-control my-4 py-2 text-center" placeholder="Confirme contraseña" required>
+                                <input type="text" name="" id="" class="form-control my-4 py-2 text-center" placeholder="Ingrese su Direccion" required>
                                 <div class="text-center mt-3">
-                                    <button class="btn btn-primary">Registrarse</button>
+                                    <input id="enviar" type="submit" class="btn btn-primary" value="Registrarse"/>
                                     <br>
                                     <a id="crear" href="login.html">Ya tengo Cuenta</a>
                                 </div>
