--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="estiloshome.css">
-    <script src="home.js" defer></script>
+    <script src="home.js" defer></script> 
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -135,8 +135,15 @@
         </section> -->
 
         <section id="contenedor-producto" class="inventario"></section>
+
+       <!--<section id="carrito"></section>--> 
+       <div id="carrito">
+            <h2>Carrito de Compras</h2>
+            <ul id="lista-carrito"></ul>
+            <p>Total: <span id="total"></span></p>
+            <button id="comprar-btn" class="boton">Comprar</button>
+        </div>
     </main>
-    
 
 </body>
 </html>
