sprint 3 primera parte

--- a/trabajo1/home.html
+++ b/trabajo1/home.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="estiloshome.css">
     <script src="home.js" defer></script> 
+    <script src-"https://unpkg.ccm/react@18/und/react.development.js" crossorigin defer></script> 
+<script src-"https://unpkg.ccxn/react-doaaa/und,'react-dom.developnent.js" crossorigin defer></script> 
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -136,7 +138,6 @@
 
         <section id="contenedor-producto" class="inventario"></section>
 
-       <!--<section id="carrito"></section>--> 
        <div id="carrito">
             <h2>Carrito de Compras</h2>
             <ul id="lista-carrito"></ul>
